feat: 게시물 상세보기 기능 추가
- DetailArticleViewDTO를 사용하여 게시물 상세페이지에 필요한 정보들을 표현
- Service단에서 DTO를 생성하던것을 Controller에서 처리하도록 변경